[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/menus/settings menu/DisplaySettings.gd" type="Script" id=1]
[ext_resource path="res://src/ui/menus/settings menu/AudioSettings.gd" type="Script" id=2]
[ext_resource path="res://src/ui/menus/settings menu/SettingsMenu.gd" type="Script" id=3]

[node name="GameSettings" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -206.0
margin_right = 294.0
margin_bottom = 194.0
rect_min_size = Vector2( 300, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/scaleborder_size = 0
window_title = "Settings"
resizable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 30
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 30.0
margin_right = 590.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 5
collapsed = true
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VSplitContainer"]
margin_right = 580.0
margin_bottom = 303.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/side_margin = 15
tab_align = 0
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="MarginContainer" parent="MarginContainer/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 63.0
margin_right = -18.0
margin_bottom = -18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionSetting" type="HSplitContainer" parent="MarginContainer/VSplitContainer/TabContainer/Display"]
margin_left = 30.0
margin_top = 30.0
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 0
collapsed = true
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VSplitContainer/TabContainer/Display/ResolutionSetting"]
margin_top = 9.0
margin_right = 114.0
margin_bottom = 36.0
text = "Resolution: "

[node name="ResolutionOption" type="OptionButton" parent="MarginContainer/VSplitContainer/TabContainer/Display/ResolutionSetting"]
margin_left = 114.0
margin_right = 174.0
margin_bottom = 45.0
rect_min_size = Vector2( 60, 0 )
align = 1

[node name="Audio" type="MarginContainer" parent="MarginContainer/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 63.0
margin_right = -18.0
margin_bottom = -18.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/TabContainer/Audio"]
margin_left = 30.0
margin_top = 30.0
margin_right = 514.0
margin_bottom = 192.0
custom_constants/separation = 10

[node name="MasterVolumeSetting" type="HSplitContainer" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer"]
margin_right = 320.0
margin_bottom = 27.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MasterVolumeSetting"]
margin_right = 162.0
margin_bottom = 27.0
hint_tooltip = "Master volume"
mouse_filter = 1
text = "Master volume: "

[node name="Slider" type="HSlider" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MasterVolumeSetting"]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 12
size_flags_vertical = 6
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="MusicVolumeSetting" type="HSplitContainer" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 37.0
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MusicVolumeSetting"]
margin_right = 146.0
margin_bottom = 27.0
hint_tooltip = "Music volume"
mouse_filter = 1
text = "Music volume: "

[node name="Slider" type="HSlider" parent="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MusicVolumeSetting"]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="Controls" type="MarginContainer" parent="MarginContainer/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 63.0
margin_right = -18.0
margin_bottom = -18.0

[node name="SaveButton" type="Button" parent="MarginContainer/VSplitContainer"]
margin_left = 257.0
margin_top = 315.0
margin_right = 323.0
margin_bottom = 360.0
size_flags_horizontal = 4
size_flags_vertical = 12
text = "save"

[connection signal="item_selected" from="MarginContainer/VSplitContainer/TabContainer/Display/ResolutionSetting/ResolutionOption" to="MarginContainer/VSplitContainer/TabContainer/Display" method="_on_resolution_selected"]
[connection signal="value_changed" from="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MasterVolumeSetting/Slider" to="MarginContainer/VSplitContainer/TabContainer/Audio" method="_on_master_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VSplitContainer/TabContainer/Audio/VBoxContainer/MusicVolumeSetting/Slider" to="MarginContainer/VSplitContainer/TabContainer/Audio" method="_on_music_volume_changed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/SaveButton" to="." method="_on_save_button_pressed"]
